tests/paczka1/fuzzy1/74559770.err
Error in line 34: bhc0 S686 4,5
Error in line 22: A866 A866 110,5
